--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -290,16 +290,20 @@ div:nth-of-type(1) > .list > .roomState .star {
   color: black;
 }
 
-#stateDetailsOverlay > button[icon=close] {
+#stateDetailsOverlay > .buttons.one {
   position: absolute;
   right: 10px;
   top: 10px;
 }
 
-#stateDetailsOverlay > button[icon=edit], #stateDetailsOverlay > button[icon=edit_off], #stateDetailsOverlay > button[icon=save] {
+#stateDetailsOverlay > .buttons.two {
   position: absolute;
   left: 10px;
   top: 10px;
+}
+
+#stateDetailsOverlay > .buttons > button {
+  display: inline-flex;
 }
 
 #stateDetailsOverlay {
@@ -336,11 +340,8 @@ div:nth-of-type(1) > .list > .roomState .star {
 #mainImage div, #similarImage div, .variant-image div {
   background: #fff8;
 }
-.notEditing .onlyForEdit {
-  display: none;
-}
-.editing .hideForEdit {
-  display: none;
+.notEditing .onlyForEdit, .editing .hideForEdit {
+  display: none !important;
 }
 #mainImage div button, #similarImage div button, .variant-image div button {
   margin: calc(50% - 17px) auto;
@@ -582,6 +583,15 @@ div:nth-of-type(1) > .list > .roomState .star {
     display: none;
   }
 }
+@media (max-width: 1140px), (max-height: 712px) {
+  #closeDetails {
+    font-size: 0;
+    padding: 5px;
+  }
+  #closeDetails::before {
+    margin: 0;
+  }
+}
 @media (max-width: 1040px), (max-height: 650px) {
   .variant {
     padding: .11rem .5rem;
@@ -600,6 +610,9 @@ div:nth-of-type(1) > .list > .roomState .star {
     max-width: 38rem;
     height: unset;
     padding: 20px;
+  }
+  #mainDetails {
+    margin-top: 60px;
   }
   #mainImage, #similarImage {
     position: unset;
@@ -626,11 +639,6 @@ div:nth-of-type(1) > .list > .roomState .star {
   }
   #helpTexts {
     padding: 0 20px;
-  }
-}
-@media (max-width: 800px), (max-height: 500px) {
-  #mainDetails {
-    margin-top: 60px;
   }
 }
 @media (max-width: 500px), (max-height: 312px) {
@@ -684,6 +692,16 @@ div:nth-of-type(1) > .list > .roomState .star {
   }
   #helpTexts {
     padding: 0 10px;
+  }
+}
+@media (max-width: 356px), (max-height: 222px) {
+  #stateDetailsOverlay > .buttons.one, #stateDetailsOverlay > .buttons.two {
+    position: unset;
+    display: inline-block;
+    margin: 2px auto;
+  }
+  #mainDetails {
+    margin-top: 10px;
   }
 }
 
