--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -278,6 +278,22 @@ div:nth-of-type(1) > .list > .roomState .star {
     height: 48px;
   }
 }
+@media (min-width: 200px) {
+  #statesOverlay {
+    padding-right: 600px;
+    --size: calc((var(--roomWidth) * var(--scale) - 610px) / 4 - 22px);
+  }
+  #statesOverlay > #stateDetailsOverlay {
+    display: block !important;
+    position: absolute;
+    width: 600px;
+    right: 0;
+    left: unset;
+  }
+  #mainDetails, #similarDetails {
+    min-height: 190px;
+  }
+}
 
 
 
@@ -555,12 +571,6 @@ div:nth-of-type(1) > .list > .roomState .star {
   width: 100%;
 }
 
-@media not all and (max-width: 957px), not all and (max-height: 600px), not all and (max-width: 1000px) and (max-height: 643px) {
-  #stateDetailsOverlay #helpTexts, #stateDetailsOverlay #similarDetails {
-    display: block !important;
-  }
-}
-@media (max-width: 1260px), (max-height: 787px) {
   #stateDetailsOverlay {
     --mainDetailsHeight: 200px;
     --similarDetailsHeight: 160px;
@@ -582,8 +592,6 @@ div:nth-of-type(1) > .list > .roomState .star {
   #nextState .details, #prevState .details {
     display: none;
   }
-}
-@media (max-width: 1140px), (max-height: 712px) {
   #closeDetails {
     font-size: 0;
     padding: 5px;
@@ -591,13 +599,9 @@ div:nth-of-type(1) > .list > .roomState .star {
   #closeDetails::before {
     margin: 0;
   }
-}
-@media (max-width: 1040px), (max-height: 650px) {
   .variant {
     padding: .11rem .5rem;
   }
-}
-@media (max-width: 957px), (max-height: 600px), (max-width: 1000px) and (max-height: 643px) {
   #stateDetailsOverlay {
     --mainDetailsHeight: 150px;
     --similarDetailsHeight: 150px;
@@ -640,7 +644,6 @@ div:nth-of-type(1) > .list > .roomState .star {
   #helpTexts {
     padding: 0 20px;
   }
-}
 @media (max-width: 500px), (max-height: 312px) {
   #stateDetailsOverlay {
     --mainDetailsHeight: 50px;
